# shortstack

./: .gitignore  CMakeLists.txt  README.md  build_redis.sh  copy_bins.sh  gen_hosts_file.py  gen_workload.py  genie.csv  get_wondershaper.sh  hosts.csv  hosts2.csv  init_exp.sh  init_exp_baseline.sh  latency_breakdown.sh  push_bins.sh  singlebox.csv  test_hosts.csv  workload_generator.py  zedro.hosts
benchmark/: CMakeLists.txt
benchmark/src/: pancake_benchmark.cpp  redis_benchmark.cpp  redis_benchmark_async.cpp  shortstack_benchmark.cpp
cmake-modules/: Dependencies.cmake
libclient/src/: async_proxy_client.h  command_response_reader.cpp  command_response_reader.h  pancake_client.cpp  pancake_client.h  proxy_client.h  shortstack_client.cpp  shortstack_client.h
libstorage/src/: dummy_kv.cpp  dummy_kv.h  redis.cpp  redis.h  storage_interface.h
proxy/src/: block_id_parser.cpp  block_id_parser.h  chain_module.cpp  chain_module.h  chain_request_client.cpp  chain_request_client.h  chain_response_client.cpp  chain_response_client.h  consistent_hash.cpp  consistent_hash.h  dist_info_constants.cpp  dist_info_constants.h  dist_info_types.cpp  dist_info_types.h  distribution_info.cpp  distribution_info.h  enc_proxy.cpp  enc_proxy.h  encryption_engine.cpp  encryption_engine.h  host_info.cpp  host_info.h  initializer.cpp  initializer.h  l1_proxy.cpp  l1_proxy.h  l2_interface.cpp  l2_interface.h  l2_proxy.cpp  l2_proxy.h  l3_interface.cpp  l3_interface.h  l3_proxy.cpp  l3_proxy.h  p_proxy.cpp  p_proxy.h  pancake_proxy.cpp  pancake_proxy.h  proxy.h  proxy_manager.cpp  (+8 more)
sbin/: analyze.sh  collect.sh  hosts.sh  run.sh  run_enc.sh  run_l1.sh  run_l2.sh  run_l3.sh  run_pancake.sh  run_redis.sh  setup.sh  start.sh  start_enc.sh  start_l1.sh  start_l2.sh  start_l3.sh  start_pancake.sh  start_redis.sh  stop.sh  stop_proxys.sh  stop_proxys_force.sh  stop_redis.sh  sync.sh
server/: CMakeLists.txt
server/src/: proxy_server.cpp
service/src/: block_request_service.cpp  block_request_service.h  block_response_service.cpp  block_response_service.h  l1_handler.cpp  l1_handler.h  l1_handler_factory.cpp  l1_handler_factory.h  l1_server.cpp  l1_server.h  l2_handler.cpp  l2_handler.h  l2_handler_factory.cpp  l2_handler_factory.h  l2_server.cpp  l2_server.h  l2proxy.cpp  l2proxy.h  l3_handler.cpp  l3_handler.h  l3_handler_factory.cpp  l3_handler_factory.h  l3_server.cpp  l3_server.h  l3proxy.cpp  l3proxy.h  pancake_thrift.cpp  pancake_thrift.h  pancake_thrift_response.cpp  proxy_types.cpp  proxy_types.h  thrift_handler.cpp  thrift_handler.h  thrift_handler_factory.cpp  thrift_handler_factory.h  thrift_response_client.h  thrift_response_client_map.h  thrift_server.cpp
tests/: CMakeLists.txt
tests/src/: shortstack_driver.cpp  shortstack_test.cpp  storage_interface_test.cpp
thrift/: CMakeLists.txt  dist_info.thrift  proxy.thrift
traces/: helloworld  simple  skewed
